# sd-journofinder

./: .env.example  .gitignore  BRAND_INTAKE.md  README.md  pyproject.toml
brands/: example.yaml
journofinder/: __init__.py  aggregate.py  cli.py  config.py  db.py  enrich.py  env.py  llm.py  pipeline.py  report.py  textutil.py
journofinder/sources/: newsapi_ai.py  web_discovery.py
tests/: test_aggregate.py  test_enrich.py  test_newsapi_chunk.py  test_report.py  test_textutil.py
